# root_ws

./: .gitignore  readme.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/xf_mic_asr_offline/: Get_Awake_Angle_srvRequest.h  Get_Major_Mic_srvRequest.h  position.h
devel/include/xf_mic_asr_offline_line/: Get_Awake_Angle_srvRequest.h  Get_Awake_Angle_srvResponse.h  Get_Major_Mic_srvRequest.h  Get_Major_Mic_srvResponse.h  Get_Offline_Result_srvRequest.h  Get_Offline_Result_srvResponse.h  Pcm_Msg.h  Set_Awake_Word_srvRequest.h  Set_Awake_Word_srvResponse.h  Set_Led_On_srvRequest.h  Set_Led_On_srvResponse.h  Set_Major_Mic_srvRequest.h  Set_Major_Mic_srvResponse.h  Start_Record_srvRequest.h  Start_Record_srvResponse.h  position.h
devel/lib/pkgconfig/: xf_mic_asr_offline.pc  xf_mic_asr_offline_line.pc
devel/lib/xf_mic_asr_offline/: call_recognition  command_recognition  node_close_feedback  node_opne_feedback  point_navigation  refresh_mic  voice_control
devel/lib/xf_mic_asr_offline_line/: call_recognition  command_recognition  limo_commands  limo_microphone  node_feedback  voice_control  wheeltec_mic
sound_play/: CMakeLists.txt
sound_play/test/: CMakeLists.txt  test (copy).cpp  test.cpp  wavfilesub.cpp
src/xf_mic_asr_offline_line/: CMakeLists.txt  tts_text.txt
src/xf_mic_asr_offline_line/audio/: vvui_deno.pcm
src/xf_mic_asr_offline_line/config/: appid_params.yaml  call_limo.bnf  recognition_params.yaml
src/xf_mic_asr_offline_line/include/: joint.h  user_interface.h
src/xf_mic_asr_offline_line/launch/: base.launch  limo.launch  (+1 more)
(+54 files in other folders)
